add GameSettings and Title

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,1 +1,7 @@
 @import './reset';
+@import './veriables';
+@import './App';
+@import './GameTitle';
+@import './GameSettings';
+@import './CardCounter';
+@import './GamePace';
