--- a/src/styles/_App.scss
+++ b/src/styles/_App.scss
@@ -14,6 +14,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 40px;
+    margin: 1rem;
   }
 }
